--- a/app/src/main/res/layout/edit.xml
+++ b/app/src/main/res/layout/edit.xml
@@ -9,10 +9,9 @@
         android:orientation="vertical"
         android:padding="10dp">
 
-
         <TextView
             android:gravity="end"
-            android:id="@+id/time"
+            android:id="@+id/tv_note_time"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/time"
